tests/baselines/reference/genericTypeReferenceWithoutTypeArgument2.errors.txt
==== tests/cases/compiler/genericTypeReferenceWithoutTypeArgument2.ts (25 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    interface I<T> {
        foo: T;
    }
    
    var c: I;
           ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var a: { x: I };
                ~
!!! error TS2173: Generic type references must include all type arguments.
    var b: { (x: I): I };
                 ~
!!! error TS2173: Generic type references must include all type arguments.
                     ~
!!! error TS2173: Generic type references must include all type arguments.
    var d: { [x: I]: I };
              ~~~~
!!! error TS1023: Index signature parameter type must be 'string' or 'number'.
                 ~
!!! error TS2173: Generic type references must include all type arguments.
                     ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var e = (x: I) => { var y: I; return y; }
                ~
!!! error TS2173: Generic type references must include all type arguments.
                               ~
!!! error TS2173: Generic type references must include all type arguments.
    
    function f(x: I): I { var y: I; return y; }
                  ~
!!! error TS2173: Generic type references must include all type arguments.
                      ~
!!! error TS2173: Generic type references must include all type arguments.
                                 ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var g = function f(x: I): I { var y: I; return y; }
                          ~
!!! error TS2173: Generic type references must include all type arguments.
                              ~
!!! error TS2173: Generic type references must include all type arguments.
                                         ~
!!! error TS2173: Generic type references must include all type arguments.
    
    class D extends I {
                    ~
!!! error TS2073: A class may only extend another class.
                    ~
!!! error TS2173: Generic type references must include all type arguments.
    }
    
    interface U extends I {}
                        ~
!!! error TS2173: Generic type references must include all type arguments.
    
    module M {
        export interface E<T> { foo: T }
    }
    
    class D2 extends M.C { }
                       ~
!!! error TS2094: The property 'C' does not exist on value of type 'M'.
    interface D3<T extends M.E> { }
                           ~~~
!!! error TS2173: Generic type references must include all type arguments.
    interface I2 extends M.C { }
                           ~
!!! error TS2094: The property 'C' does not exist on value of type 'M'.
    
    function h<T extends I>(x: T) { }
                         ~
!!! error TS2173: Generic type references must include all type arguments.
    function i<T extends M.E>(x: T) { }
                         ~~~
!!! error TS2173: Generic type references must include all type arguments.
    
    var j = <C>null;
             ~
!!! error TS2095: Could not find symbol 'C'.
    var k = <M.E>null;
             ~~~
!!! error TS2173: Generic type references must include all type arguments.